--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         const Pi = window.Pi;
         Pi.init({ version: "2.0" });
 
-        // نظام التحويل التلقائي لبيئة باي الآمنة
+        // نظام التحويل التلقائي الذكي لضمان الدخول عبر بيئة باي
         if (window.location.href.includes("pinet.com") || window.location.href.includes("pi")) {
             window.location.replace("pi://bmnet9733.pinet.com");
         }
@@ -19,12 +19,14 @@
 
     <style>
         :root { --primary-dark: #0b0e14; --emerald-green: #00c853; --pi-gold: #e5a93d; --stellar-purple: #5e2a84; }
-        body { font-family: 'Segoe UI', sans-serif; background-color: var(--primary-dark); color: white; margin: 0; padding: 20px; text-align: center; }
-        .app-container { max-width: 500px; margin: auto; background: #1a1d26; border-radius: 25px; padding: 30px; border: 1px solid #333; box-shadow: 0 10px 40px rgba(0, 200, 83, 0.1); }
-        .ai-header { color: var(--pi-gold); font-size: 1.5em; font-weight: bold; margin-bottom: 20px; border-bottom: 2px solid var(--stellar-purple); padding-bottom: 10px; }
-        .feature-box { background: #252a35; padding: 15px; border-radius: 15px; margin: 15px 0; text-align: right; border-right: 4px solid var(--emerald-green); }
-        .status-badge { display: inline-block; padding: 5px 15px; border-radius: 20px; background: var(--stellar-purple); font-size: 0.8em; margin-bottom: 10px; }
-        .cta-btn { background: linear-gradient(90deg, var(--pi-gold), #d49835); color: white; border: none; padding: 18px 40px; border-radius: 35px; font-size: 1.2em; font-weight: bold; text-decoration: none; display: block; width: 100%; box-sizing: border-box; margin-top: 25px; cursor: pointer; }
+        body { font-family: 'Segoe UI', sans-serif; background-color: var(--primary-dark); color: white; margin: 0; padding: 20px; text-align: center; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
+        .app-container { width: 100%; max-width: 450px; background: #1a1d26; border-radius: 25px; padding: 30px; border: 1px solid #333; box-shadow: 0 10px 40px rgba(0, 200, 83, 0.15); }
+        .status-badge { display: inline-block; padding: 6px 16px; border-radius: 20px; background: var(--stellar-purple); font-size: 0.85em; margin-bottom: 15px; font-weight: bold; }
+        .ai-header { color: var(--pi-gold); font-size: 1.6em; font-weight: bold; margin-bottom: 25px; border-bottom: 2px solid var(--stellar-purple); padding-bottom: 12px; }
+        .feature-box { background: #252a35; padding: 18px; border-radius: 15px; margin: 15px 0; text-align: right; border-right: 4px solid var(--emerald-green); }
+        .feature-box strong { color: var(--emerald-green); display: block; margin-bottom: 5px; }
+        .cta-btn { background: linear-gradient(90deg, var(--pi-gold), #d49835); color: white; border: none; padding: 20px; border-radius: 35px; font-size: 1.25em; font-weight: bold; text-decoration: none; display: block; width: 100%; margin-top: 30px; cursor: pointer; transition: 0.3s; box-shadow: 0 5px 15px rgba(229, 169, 61, 0.3); }
+        .cta-btn:hover { transform: translateY(-3px); filter: brightness(1.1); }
     </style>
 </head>
 <body>
@@ -34,42 +36,37 @@
     <div class="ai-header">🎓 BM NET Academy</div>
 
     <div class="feature-box">
-        <strong>🧠 Stellar AI Analyzer:</strong>
-        <p>تحليل عميق للكود مع فحص الأمان والأداء وتوصيات ذكية للتحسين.</p>
+        <strong>🧠 Stellar AI Analyzer</strong>
+        تحليل عميق للأكواد (C++, Rust) مع فحص الأمان وتوصيات ذكية فورية.
     </div>
 
     <div class="feature-box">
-        <strong>🛡️ الأمن السيبراني:</strong>
-        <p>احتراف لغات البرمجة (C++, Rust) وحماية الأنظمة الرقمية.</p>
+        <strong>🛡️ الأمن السيبراني</strong>
+        تعلم حماية الأنظمة وصناعة الثروة الرقمية في تحديات الـ 9 أيام.
     </div>
 
     <div class="feature-box">
-        <strong>💰 اقتصاد الـ Web3:</strong>
-        <p>مستويات تعليمية مرتبطة بنظام الدفع الرسمي (3.14π).</p>
+        <strong>💎 اقتصاد الـ Web3</strong>
+        توثيق الشهادات على البلوكشين ونظام دفع متكامل بمبلغ 3.14π.
     </div>
 
-    <button onclick="startLearning()" class="cta-btn">دخول الأكاديمية (3.14π)</button>
+    <button onclick="startBMNET()" class="cta-btn">دخول الأكاديمية (3.14π)</button>
 </div>
 
 <script>
-    async function startLearning() {
+    async function startBMNET() {
         try {
-            // نظام التوثيق والدفع المدمج
+            // نظام التوثيق الرسمي لشبكة باي
             const auth = await Pi.authenticate(['username', 'payments'], function(payment) {
-                console.log("Payment in progress...");
+                console.log("Processing payment for BM NET course...");
             });
             if (auth) {
-                // تفعيل محرك Stellar AI عند الدخول
+                // التحويل للرابط الرسمي داخل الإيكوسيستيم
                 window.location.replace("pi://bmnet9733.pinet.com");
             }
         } catch (e) {
-            alert("يرجى الدخول من متصفح Pi للاستفادة من Stellar AI.");
+            alert("يرجى الدخول من متصفح Pi Browser للاستفادة من Stellar AI.");
         }
-    }
-
-    // دالة محاكاة لتحليل الكود (Deep Star AI)
-    function stellarAudit(code) {
-        console.log("Deep Star AI auditing started...");
     }
 </script>
 
